--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -7,12 +7,11 @@
   <ItemGroup>
     <Folder Include="Entities\Calls\" />
     <Folder Include="Enums\" />
-    <Folder Include="Services\Abstract\" />
-    <Folder Include="Services\Concrete\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
