--- a/WebUI/wwwroot/angular.json
+++ b/WebUI/wwwroot/angular.json
@@ -138,5 +138,8 @@
       }
     }
   },
-  "defaultProject": "wwwroot"
+  "defaultProject": "wwwroot",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
