--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Base\Base.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\BusinessTrip\" />
+  </ItemGroup>
+
 </Project>
