--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ApiControllers\Admin\" />
     <Folder Include="ClientApp\" />
   </ItemGroup>
 
