--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Base\Base.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
