--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\3rdpartylicenses.txt" />
+    <Content Remove="wwwroot\favicon.ico" />
+    <Content Remove="wwwroot\index.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
@@ -19,6 +25,21 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\" />
+    <Folder Include="ClientApp\dist\SushiWorldApp\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\3rdpartylicenses.txt" />
+    <None Include="wwwroot\6.ea4ace78e194618818af.js" />
+    <None Include="wwwroot\7.424f2a3269eda0646bcf.js" />
+    <None Include="wwwroot\common.2fc049c9b38c7138d039.js" />
+    <None Include="wwwroot\favicon.ico" />
+    <None Include="wwwroot\index.html" />
+    <None Include="wwwroot\main.c66c76b9229937f1965f.js" />
+    <None Include="wwwroot\polyfills-es5.5b81d9003219a04d2670.js" />
+    <None Include="wwwroot\polyfills.386c9f4385b0f0ec30e1.js" />
+    <None Include="wwwroot\runtime.3f21396c0dcd9b2f1e1d.js" />
+    <None Include="wwwroot\styles.71924668efd9ff6be3e3.css" />
   </ItemGroup>
 
 </Project>
