--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -6,12 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="wwwroot\3rdpartylicenses.txt" />
-    <Content Remove="wwwroot\favicon.ico" />
-    <Content Remove="wwwroot\index.html" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.9.1" />
     <PackageReference Include="FluentScheduler" Version="5.3.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.1" />
@@ -19,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,15 +23,7 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\dist\SushiWorldApp\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="wwwroot\3rdpartylicenses.txt" />
-    <None Include="wwwroot\favicon.ico" />
-    <None Include="wwwroot\index.html" />
-    <None Include="wwwroot\polyfills-es5.5b81d9003219a04d2670.js" />
-    <None Include="wwwroot\polyfills.386c9f4385b0f0ec30e1.js" />
-    <None Include="wwwroot\styles.71924668efd9ff6be3e3.css" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
