--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -23,7 +23,21 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\dist\SushiWorldApp\" />
-    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\3rdpartylicenses.txt" />
+    <None Include="wwwroot\6.2829302d8884fa1c17c7.js" />
+    <None Include="wwwroot\7.954c766185b0d888ae5b.js" />
+    <None Include="wwwroot\8.b521112115e3134eead1.js" />
+    <None Include="wwwroot\common.9d6dfe7052522b08b210.js" />
+    <None Include="wwwroot\favicon.ico" />
+    <None Include="wwwroot\index.html" />
+    <None Include="wwwroot\main.a6549d5debee7d0d7530.js" />
+    <None Include="wwwroot\polyfills-es5.4203565ec6dfe9edc227.js" />
+    <None Include="wwwroot\polyfills.61f865e4f5e526a16ead.js" />
+    <None Include="wwwroot\runtime.47bba4370a58b5e83803.js" />
+    <None Include="wwwroot\styles.71924668efd9ff6be3e3.css" />
   </ItemGroup>
 
 </Project>
