--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -22,21 +22,22 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ApiControllers\Markitolog\" />
     <Folder Include="ClientApp\dist\SushiWorldApp\" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="wwwroot\3rdpartylicenses.txt" />
-    <None Include="wwwroot\6.2829302d8884fa1c17c7.js" />
-    <None Include="wwwroot\7.954c766185b0d888ae5b.js" />
+    <None Include="wwwroot\6.d233f30fbaf14a38fa77.js" />
+    <None Include="wwwroot\7.f410c33356e2964db7f5.js" />
     <None Include="wwwroot\8.b521112115e3134eead1.js" />
     <None Include="wwwroot\common.9d6dfe7052522b08b210.js" />
     <None Include="wwwroot\favicon.ico" />
     <None Include="wwwroot\index.html" />
-    <None Include="wwwroot\main.a6549d5debee7d0d7530.js" />
+    <None Include="wwwroot\main.b2ecea574dea1d604b9a.js" />
     <None Include="wwwroot\polyfills-es5.4203565ec6dfe9edc227.js" />
     <None Include="wwwroot\polyfills.61f865e4f5e526a16ead.js" />
-    <None Include="wwwroot\runtime.47bba4370a58b5e83803.js" />
+    <None Include="wwwroot\runtime.c53748ccec855b661e3c.js" />
     <None Include="wwwroot\styles.71924668efd9ff6be3e3.css" />
   </ItemGroup>
 
