--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\manager-rm\reach-outcomes\Model\reach-outcomes.model.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.9.1" />
     <PackageReference Include="FluentScheduler" Version="5.3.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.1" />
@@ -28,9 +32,9 @@
 
   <ItemGroup>
     <None Include="wwwroot\3rdpartylicenses.txt" />
-    <None Include="wwwroot\6.d233f30fbaf14a38fa77.js" />
-    <None Include="wwwroot\7.e36b3544a71059cd11a6.js" />
-    <None Include="wwwroot\8.b249bc601cdf18664d66.js" />
+    <None Include="wwwroot\6.49d532bd25ed39d6c15f.js" />
+    <None Include="wwwroot\7.3f7e84122648d51e3eb7.js" />
+    <None Include="wwwroot\8.c8f52c09a681f8353f93.js" />
     <None Include="wwwroot\9.08ba564c2f110a298721.js" />
     <None Include="wwwroot\common.f7a43d9290e52be0fff6.js" />
     <None Include="wwwroot\favicon.ico" />
@@ -38,8 +42,12 @@
     <None Include="wwwroot\main.ce67a4c03aba552a7d42.js" />
     <None Include="wwwroot\polyfills-es5.f2d86d4910a60a141149.js" />
     <None Include="wwwroot\polyfills.514a252ed26d181eb162.js" />
-    <None Include="wwwroot\runtime.8ff43e4a90dff300784e.js" />
+    <None Include="wwwroot\runtime.d17726aa9bd2f676c0d7.js" />
     <None Include="wwwroot\styles.71924668efd9ff6be3e3.css" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\manager-rm\reach-outcomes\Model\reach-outcomes.model.ts" />
   </ItemGroup>
 
 </Project>
