--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <Folder Include="ApiControllers\Markitolog\" />
     <Folder Include="ClientApp\dist\SushiWorldApp\" />
+    <Folder Include="ClientApp\src\app\manager-rm\reach-outcomes\Dialog\" />
   </ItemGroup>
 
   <ItemGroup>
