--- a/WebUI/ClientApp/package.json
+++ b/WebUI/ClientApp/package.json
@@ -26,8 +26,14 @@
     "@ngrx/effects": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
+    "@types/hammerjs": "^2.0.36",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^8.1.12",
+    "jszip": "^3.1.5",
+    "minireset.css": "~0.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -35,10 +41,11 @@
     "@angular/cli": "~8.0.3",
     "@angular/compiler-cli": "~8.0.1",
     "@angular/language-service": "~8.0.1",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "igniteui-cli": "~4.2.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
