--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.9.1" />
+    <PackageReference Include="Enums.NET" Version="2.3.2" />
     <PackageReference Include="FluentScheduler" Version="5.3.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -34,8 +35,8 @@
   <ItemGroup>
     <None Include="wwwroot\3rdpartylicenses.txt" />
     <None Include="wwwroot\6.f6d4fab1fec71a686ad2.js" />
-    <None Include="wwwroot\7.c811c74d4f7a2baf50bc.js" />
-    <None Include="wwwroot\8.07375cb6c2c8b4a31361.js" />
+    <None Include="wwwroot\7.ed56a120a34fdfe1621a.js" />
+    <None Include="wwwroot\8.41ec4dfa79a8f1387054.js" />
     <None Include="wwwroot\9.d84acd3dc7d8e1bcb603.js" />
     <None Include="wwwroot\common.a89bc12bb1a259a4fe2b.js" />
     <None Include="wwwroot\favicon.ico" />
@@ -43,7 +44,7 @@
     <None Include="wwwroot\main.af38e08c2d1ae520fd42.js" />
     <None Include="wwwroot\polyfills-es5.f2d86d4910a60a141149.js" />
     <None Include="wwwroot\polyfills.0a1f7db38f338842d03b.js" />
-    <None Include="wwwroot\runtime.feae031b54768ed04a27.js" />
+    <None Include="wwwroot\runtime.54f0f0a3564c98909ecb.js" />
     <None Include="wwwroot\styles.ef961c0b094e421f3676.css" />
   </ItemGroup>
 
