--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\assets\logo.jpg" />
+    <Content Remove="wwwroot\logo.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="ClientApp\src\app\manager-rm\reach-outcomes\Model\reach-outcomes.model.ts" />
   </ItemGroup>
 
@@ -34,17 +39,18 @@
 
   <ItemGroup>
     <None Include="wwwroot\3rdpartylicenses.txt" />
-    <None Include="wwwroot\6.f6d4fab1fec71a686ad2.js" />
-    <None Include="wwwroot\7.ce04775349db3a8fd38d.js" />
-    <None Include="wwwroot\8.7f64e2a4d929f5f8d799.js" />
+    <None Include="wwwroot\6.57e456fd4fcc493e8d20.js" />
+    <None Include="wwwroot\7.831751e5dc0ec900798c.js" />
+    <None Include="wwwroot\8.29de6c9e633739e24c8f.js" />
     <None Include="wwwroot\9.d84acd3dc7d8e1bcb603.js" />
+    <None Include="wwwroot\assets\logo.jpg" />
     <None Include="wwwroot\common.a89bc12bb1a259a4fe2b.js" />
-    <None Include="wwwroot\favicon.ico" />
+    <None Include="wwwroot\Icon\logo.jpg" />
     <None Include="wwwroot\index.html" />
     <None Include="wwwroot\main.8b85367c82d43c8f51e7.js" />
     <None Include="wwwroot\polyfills-es5.f2d86d4910a60a141149.js" />
     <None Include="wwwroot\polyfills.0a1f7db38f338842d03b.js" />
-    <None Include="wwwroot\runtime.32128931049e697a7eee.js" />
+    <None Include="wwwroot\runtime.bfc79fd9212db73081f4.js" />
     <None Include="wwwroot\styles.ef961c0b094e421f3676.css" />
   </ItemGroup>
 
