Добалены сылка на свонок в диалогом окне, есть возможность прослущать звонок и контролировть его через страницу Плана у Контролера

--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -35,6 +35,7 @@
     <Folder Include="ApiControllers\Markitolog\" />
     <Folder Include="ClientApp\dist\SushiWorldApp\" />
     <Folder Include="ClientApp\src\app\manager-rm\reach-outcomes\Dialog\" />
+    <Folder Include="ClientApp\src\app\сontroler\plan-task\dialog\" />
   </ItemGroup>
 
   <ItemGroup>
