Отимизация алгоритма сортировок, на странице отчетов контролера - у меньшена задержка выбора сортировки

--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -36,6 +36,7 @@
     <Folder Include="ClientApp\dist\SushiWorldApp\" />
     <Folder Include="ClientApp\src\app\manager-rm\reach-outcomes\Dialog\" />
     <Folder Include="ClientApp\src\app\сontroler\plan-task\dialog\" />
+    <Folder Include="ViewModels\Controler\" />
   </ItemGroup>
 
   <ItemGroup>
