--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Content Remove="wwwroot\assets\logo.jpg" />
+    <Content Remove="wwwroot\Icon\noIncoming.png" />
     <Content Remove="wwwroot\logo.jpg" />
   </ItemGroup>
 
@@ -40,19 +41,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\3rdpartylicenses.txt" />
-    <None Include="wwwroot\6.8e96ab7d5e35ac4bc0e7.js" />
-    <None Include="wwwroot\7.21ff1600275ec9e6eb25.js" />
-    <None Include="wwwroot\8.33b66760a20c0250142a.js" />
-    <None Include="wwwroot\9.f7106ec0ab4dcdfd6cf2.js" />
     <None Include="wwwroot\assets\logo.jpg" />
-    <None Include="wwwroot\common.a89bc12bb1a259a4fe2b.js" />
-    <None Include="wwwroot\index.html" />
-    <None Include="wwwroot\main.ae1cecfec5f384b64cc9.js" />
-    <None Include="wwwroot\polyfills-es5.f2d86d4910a60a141149.js" />
-    <None Include="wwwroot\polyfills.0a1f7db38f338842d03b.js" />
-    <None Include="wwwroot\runtime.5a30374ce9d1bacece2d.js" />
-    <None Include="wwwroot\styles.ef961c0b094e421f3676.css" />
+    <None Include="wwwroot\Icon\noIncoming.png" />
   </ItemGroup>
 
   <ItemGroup>
